test/compile_errors/err_labeled_bad_target.w
//! expect-check-fail: label must be followed by 'while', 'for', '{', or ':'

fn main:
    'bad let x = 1
